# f10n

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: release.yml  test.yml
src/: main.rs
